# slm-toolkit

./: Cargo.toml  check.txt  converter.py  run_converter.sh
.antigravity/: settings.json
src/: graph.rs  main.rs  tasks.rs  types.rs  ui.rs
