[package]
name = "slm-toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
log = "0.4.29"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tui-input = "0.15.0"
urlencoding = "2.1.3"
